# Project_ultralight

Analysis/: Thermalization.ipynb  decay_h2.nb  h2decay.ipynb  model.nb
CALCHEP/: bin  calchep  calchep.ini  calchep_batch
CALCHEP/models/: extlib6.mdl  extlib7.mdl  extlib8.mdl  extlib9.mdl  func6.mdl  func7.mdl  func8.mdl  func9.mdl  lgrng6.mdl  lgrng7.mdl  lgrng8.mdl  lgrng9.mdl  prtcls6.mdl  prtcls7.mdl  (+6 more)
Cuba-4.2.2/: Cuhrel  Divonnel  Suavel  Vegasl  config.status  cubal.h  demo-c  demo-fortran  makefile
Cuba-4.2.2/Ultralight (complex pseudo)/: CMakeLists.txt  README.txt
Cuba-4.2.2/Ultralight (complex pseudo)/include/: Rate.hpp
Cuba-4.2.2/Ultralight (complex pseudo)/src/: CalcRate.cpp  Rate.cpp
Mathematica/: Aproximate solutions.nb  CForm.nb  Extra interactions.nb  Real scalar.nb  U dm (new higgs).nb  U dm (real pseudo).nb
Organization/: Values.ods
Projeto-ua-thesis/: README.md  cchapter2.aux  chapter2.aux  chapterschapter2.aux  cover.aux  cover.blg  cover.tex  custom-theme.tex  fmfdefault.mp  glossary.aux  glossary.tex  gluon.1  gluon.mf  gluon.mp  matter.aux  matter.bbl  matter.bcf  matter.blg  matter.dvi  matter.lof  matter.lot  matter.out.ps  matter.run.xml  matter.tex  matter.toc  photon.1  photon.mp  project.kilepr  references.bib  uaThesisTemplate.sty
Python/: String.ipynb  misalignment.ipynb  parameters.ipynb
Slide-Project Aveiro University/: bib.bib  embed-video.tex  main.aux  main.bcf  main.nav  main.out  main.run.xml  main.snm  main.tex  main.toc
Ultralight/: CMakeLists.txt
Ultralight (real pseudo)/: Run
Ultralight_final/: README.txt
(+133 files in other folders)
